--- a/_config.yml
+++ b/_config.yml
@@ -38,9 +38,7 @@ baseurl: "/TeamBaddies" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
-  social_links:
-    twitter: fastdotai
-    github: fastai
+  skin: dark
 
 # Set this to true to get LaTeX math equation support
 use_math: 
