--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Team Baddies Fastapge
+title: Team Baddies Fastpage
 description: A website that portrays all of the amazing work, sweat, and tears that Team Baddies completes.
 github_username: SRIHITAKOTT1213
 # you can comment the below line out if your repo name is not different than your baseurl
